[gd_scene load_steps=16 format=3 uid="uid://c7pp4al68ohcg"]

[ext_resource type="Script" path="res://scenes/menu.gd" id="1_501gg"]
[ext_resource type="Texture2D" uid="uid://bwu73jxkwl1m8" path="res://sprites/Player2.png" id="1_jdyuc"]
[ext_resource type="FontFile" uid="uid://bf0pe3farcj0h" path="res://fonts/pixelcyr_normal.ttf" id="1_qt03v"]
[ext_resource type="Texture2D" uid="uid://dwyk8e76au7nt" path="res://sprites/menu_fon.png" id="2_hjvnw"]
[ext_resource type="AudioStream" uid="uid://cd5i685dm7ysb" path="res://sounds/free/Story_begins.wav" id="5_wpcf8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_02qa4"]
atlas = ExtResource("1_jdyuc")
region = Rect2(1152, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_acodx"]
atlas = ExtResource("1_jdyuc")
region = Rect2(3776, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7vhm3"]
atlas = ExtResource("1_jdyuc")
region = Rect2(3712, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m5f30"]
atlas = ExtResource("1_jdyuc")
region = Rect2(3648, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ymxf"]
atlas = ExtResource("1_jdyuc")
region = Rect2(3584, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wws1h"]
atlas = ExtResource("1_jdyuc")
region = Rect2(3520, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vvxme"]
atlas = ExtResource("1_jdyuc")
region = Rect2(1344, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3soat"]
atlas = ExtResource("1_jdyuc")
region = Rect2(1152, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6xak1"]
atlas = ExtResource("1_jdyuc")
region = Rect2(3776, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_pjnyk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_02qa4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_acodx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7vhm3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m5f30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ymxf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wws1h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vvxme")
}],
"loop": true,
"name": &"go",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3soat")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6xak1")
}],
"loop": true,
"name": &"stage",
"speed": 1.0
}]

[node name="Menu" type="Node2D"]
script = ExtResource("1_501gg")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.836755, 0.836755, 0.836755, 1)
texture_filter = 1
position = Vector2(641, 397)
scale = Vector2(1.24202, 1.26792)
texture = ExtResource("2_hjvnw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 2
position = Vector2(929, 527)
scale = Vector2(22, 22)
sprite_frames = SubResource("SpriteFrames_pjnyk")
animation = &"go"

[node name="Button" type="Button" parent="."]
offset_left = 52.0
offset_top = 259.0
offset_right = 308.0
offset_bottom = 307.0
theme_override_fonts/font = ExtResource("1_qt03v")
theme_override_font_sizes/font_size = 32
text = "Play"
metadata/_edit_use_anchors_ = true

[node name="Button2" type="Button" parent="."]
offset_left = 51.0
offset_top = 360.0
offset_right = 307.0
offset_bottom = 400.0
theme_override_fonts/font = ExtResource("1_qt03v")
theme_override_font_sizes/font_size = 24
text = "exit"
metadata/_edit_use_anchors_ = true

[node name="Button3" type="Button" parent="."]
offset_left = 51.0
offset_top = 314.0
offset_right = 307.0
offset_bottom = 354.0
theme_override_fonts/font = ExtResource("1_qt03v")
theme_override_font_sizes/font_size = 24
text = "about"
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="."]
offset_left = 37.0
offset_top = 88.0
offset_right = 1405.0
offset_bottom = 232.0
theme_override_colors/font_color = Color(0, 0, 0, 0.458824)
theme_override_fonts/font = ExtResource("1_qt03v")
theme_override_font_sizes/font_size = 128
text = "Enchanted worlds"

[node name="Label" type="Label" parent="."]
offset_left = 56.0
offset_top = 173.0
offset_right = 568.0
offset_bottom = 237.0
theme_override_fonts/font = ExtResource("1_qt03v")
theme_override_font_sizes/font_size = 48
text = "Enchanted Worlds"
metadata/_edit_use_anchors_ = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_wpcf8")
autoplay = true

[node name="play_timer" type="Timer" parent="."]
wait_time = 1.7

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
[connection signal="timeout" from="play_timer" to="." method="_on_timer_timeout"]
